# lp3-main

./: .cil.conf  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  changelog.md  conanfile.py
.travis/: install.sh
ci/: run.bat  run.ps1  run.sh
ci/.travis/: install.sh  run.sh
ci/appveyor/: install.bat  run.bat
ci/profiles/: all  clang-8  clang-8-d-shared  clang-8-r-static  msvc
ci/travis/: docs.sh
cmake/: ConanFindModuleExtra.cmake
demos/: ExitDemo.cpp  MainDemo.cpp  Sdl2Simple.cpp  WinConsoleTest.cpp
docs/: core.mrst  index.mrst  main.mrst
include/lp3/: assert.hpp  le.hpp  log.hpp  main.hpp  sdl.hpp
include/lp3/core/: Exception.hpp  exit.hpp
include/lp3/main/: config.hpp  utils.hpp
src/: ErrOut.cpp  WCharToCharConverter.cpp  assert.cpp  exception.cpp  exit.cpp  log.cpp  media.cpp  sdl.cpp  utils.cpp
src/js/: platform.cpp
src/pc/: platform.cpp
test_package/: CMakeLists.txt  conanfile.py  main_test.cpp
tests/: assert_tests.cpp  media_tests.cpp
